fix(tile): center align contentTop and contentBottom slots hen alignment prop = center

--- a/packages/calcite-components/src/components/tile/tile.scss
+++ b/packages/calcite-components/src/components/tile/tile.scss
@@ -42,7 +42,7 @@
       z-index: var(--calcite-z-index);
     }
     &:focus {
-      box-shadow: inset 0px 0px 0px 1px var(--calcite-color-brand);
+      box-shadow: inset 0 0 0 1px var(--calcite-color-brand);
       z-index: var(--calcite-z-index-sticky);
     }
   }
@@ -106,8 +106,8 @@
   .text-content {
     text-align: center;
   }
-  slot[name="content-start"]::slotted(*),
-  slot[name="content-end"]::slotted(*) {
+  slot[name="content-top"]::slotted(*),
+  slot[name="content-bottom"]::slotted(*) {
     align-self: center;
   }
 }
@@ -185,7 +185,7 @@
 :host([selection-appearance="border"][layout="vertical"]) {
   .container.selected:focus::before {
     block-size: 100%;
-    box-shadow: inset 0px 0px 0px 1px var(--calcite-color-brand);
+    box-shadow: inset 0 0 0 1px var(--calcite-color-brand);
     content: "";
     display: block;
     inline-size: 100%;
@@ -197,13 +197,13 @@
 
 :host([selection-appearance="border"][layout="horizontal"]) {
   .container.selected {
-    box-shadow: inset 0px -4px 0px 0px var(--calcite-color-brand);
+    box-shadow: inset 0 -4px 0 0 var(--calcite-color-brand);
   }
 }
 
 :host([selection-appearance="border"][layout="vertical"]) {
   .container.selected {
-    box-shadow: inset 4px 0px 0px 0px var(--calcite-color-brand);
+    box-shadow: inset 4px 0 0 0 var(--calcite-color-brand);
   }
 }
 
